Added v9 upgrade guidance

--- a/docs/docs/v9-upgrade-guidance.mdx
+++ b/docs/docs/v9-upgrade-guidance.mdx
@@ -157,6 +157,14 @@ The `spo folder rename` command was removed and replaced by the [spo folder set]
 
 Please, update your scripts to use the `spo folder set` command instead of `spo folder rename`.
 
+### Updated output of 'spo applicationcustomizer get' command
+
+We have removed stringify from the `Rights` json property for [spo applicationcustomizer get](./cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx) command to output the `Rights` as JSON property.
+
+#### What action do I need to take?
+
+Please, check the documentation of the [spo applicationcustomizer get](./cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx) command to see the updated output and adjust your scripts accordingly.
+
 ## SharePoint Framework
 
 ### Removed overwrite option from `spfx project github workflow add` command
