Enhance `entra m365group user set` command. Closes #6224

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -68,7 +68,7 @@ The deprecated Guest value was removed from the `role` option in the [aad m365gr
 
 #### What action do I need to take?
 
-Please, check the documentation of the aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
+Please, check the documentation of the [aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
 
 #### Aligned options with naming convention
 
@@ -148,6 +148,14 @@ As part of the renaming of Azure AD to Microsoft Entra ID, we have removed the `
 #### What action do I need to take?
 
 Please, check if your scripts use any of the `aad` commands and if so update it to `entra` commands.
+
+### Removed deprecated option `username` from `entra m365group user set` command.
+
+The deprecated option `username` was removed from the [entra m365group user set](./cmd/entra/m365group/m365group-user-set.mdx) command.
+
+#### What action do I need to take?
+
+Please, check the documentation of the [entra m365group user set](./cmd/entra/m365group/m365group-user-set.mdx) command to see the updated `username` option and adjust your scripts accordingly.
 
 ## SharePoint
 
