--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -27,7 +27,7 @@ yarn global add @pnp/cli-microsoft365
 
 ## Getting started
 
-Start, by configuring CLI for Microsoft 365 to your preferences. Configuration includes specifying an Entra app registration that the CLI should use. You can choose between using an existing app registration or creating a new one. To configure the CLI, run the `setup` command:
+Start, by configuring CLI for Microsoft 365 to your preferences. Configuration includes specifying an Entra app registration that the CLI should use. You can choose between using an existing app registration or creating a new one. To configure the CLI, run the [setup](./cmd/setup) command:
 
 ```sh
 m365 setup
