--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -33,7 +33,7 @@ Start, by configuring CLI for Microsoft 365 to your preferences. Configuration i
 m365 setup
 ```
 
-After configuring the CLI, you can start using it. Start managing the settings of your Microsoft 365 tenant by logging in to it, using the `login` command, for example:
+After configuring the CLI, you can start using it. Start managing the settings of your Microsoft 365 tenant by logging in to it, using the [login](./cmd/login) command, for example:
 
 ```sh
 m365 login
