--- a/docs/docs/cmd/setup.mdx
+++ b/docs/docs/cmd/setup.mdx
@@ -78,22 +78,28 @@ The `m365 setup` command uses the following presets:
 
 ## Examples
 
-Configure CLI for Microsoft based on your preferences interactively
+Configure CLI for Microsoft 365 based on your preferences interactively
 
 ```sh
 m365 setup
 ```
 
-Configure CLI for Microsoft for interactive use without prompting for additional information
+Configure CLI for Microsoft 365 for interactive use without prompting for additional information
 
 ```sh
 m365 setup --interactive
 ```
 
-Configure CLI for Microsoft for use in scripts without prompting for additional information
+Configure CLI for Microsoft 365 for use in scripts without prompting for additional information
 
 ```sh
 m365 setup --scripting
+```
+
+Configure CLI for Microsoft 365 without setting up an Entra app
+
+```sh
+m365 setup --skipApp
 ```
 
 ## Response
