--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,10 @@ sidebar_position: 3
 - [entra multitenant remove](../cmd/entra/multitenant/multitenant-remove.mdx) - removes a multitenant organization [#6009](https://github.com/pnp/cli-microsoft365/issues/6009)
 - [entra multitenant set](../cmd/entra/multitenant/multitenant-set.mdx) - updates the properties of a multitenant organization [#6008](https://github.com/pnp/cli-microsoft365/issues/6008)
 
+**Onenote:**
+
+- [onenote notebook add ](../cmd/onenote/notebook/notebook-add.mdx) - creates a new OneNote notebook. [#3100](https://github.com/pnp/cli-microsoft365/issues/3100)
+
 **SharePoint Embedded:**
 
 - [spe containertype list](../cmd/spe/containertype/containertype-list.mdx) - retrieves a list of Container Types created for a SharePoint Embedded Application [#5989](https://github.com/pnp/cli-microsoft365/issues/5989)
@@ -43,6 +47,7 @@ sidebar_position: 3
 - fixed [pa app export](../cmd/pa/app/app-export.mdx) without packageDisplayName [#6215](https://github.com/pnp/cli-microsoft365/issues/6215)
 - fixed bug when parsing number arguments [#6211](https://github.com/pnp/cli-microsoft365/issues/6211)
 - fixed command [teams meeting list](../cmd/teams/meeting/meeting-list.mdx) [#5968](https://github.com/pnp/cli-microsoft365/issues/5968)
+- fixed prompting for missing required options in ZOD commands [#6219](https://github.com/pnp/cli-microsoft365/issues/6219)
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
