--- a/docs/docs/cmd/setup.mdx
+++ b/docs/docs/cmd/setup.mdx
@@ -20,7 +20,7 @@ m365 setup [options]
 : Configure CLI for Microsoft 365 for use in scripts without prompting for additional information.
 
 `--skipApp`
-: Skip configuring an Entra app for use with CLI for Microsoft 365
+: Skip configuring an Entra app for use with CLI for Microsoft 365.
 ```
 
 <Global />
