Updates version to v9.0.0

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,7 +4,7 @@ sidebar_position: 3
 
 # Release notes
 
-## v8.1.0 (beta)
+## v9.0.0 (beta)
 
 ### New commands 
 
@@ -48,7 +48,7 @@ sidebar_position: 3
 - fixed bug when parsing number arguments [#6211](https://github.com/pnp/cli-microsoft365/issues/6211)
 - fixed command [teams meeting list](../cmd/teams/meeting/meeting-list.mdx) [#5968](https://github.com/pnp/cli-microsoft365/issues/5968)
 - fixed prompting for missing required options in ZOD commands [#6219](https://github.com/pnp/cli-microsoft365/issues/6219)
-- extends setup with a custom Entra app
+- extended setup with a custom Entra app
 
 ## [v8.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v8.0.0)
 
