Introduces support for documenting minimal command permissions.

--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-get.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-get.mdx
@@ -35,13 +35,13 @@ m365 aad administrativeunit get [options]
 Get information about the administrative unit by its id
 
 ```sh
-m365 entra administrativeunit get --id 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit get --id fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Get information about the administrative unit by its display name
 
 ```sh
-m365 entra administrativeunit get --displayName 'Marketing Division'
+m365 entra administrativeunit get --displayName 'European Division'
 ```
 
 ## Response
