--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-add.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-add.mdx
@@ -59,37 +59,37 @@ To use this command you must be either **Global Administrator** or **Privileged 
 Add a single user specified by id to an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7 --userId 1caf7dcd-7e83-4c3a-94f7-932a1299c844
+m365 entra administrativeunit member add --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab --userId 1caf7dcd-7e83-4c3a-94f7-932a1299c844
 ```
 
 Add a single user specified by user principal name to an administrative unit specified by name
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitName 'Marketing Division' --userName john.doe@contoso.com
+m365 entra administrativeunit member add --administrativeUnitName 'European Division' --userName john.doe@contoso.com
 ```
 
 Add a single group specified by id to an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7 --groupId b2307a39-e878-458b-bc90-03bc578531d6
+m365 entra administrativeunit member add --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab --groupId b2307a39-e878-458b-bc90-03bc578531d6
 ```
 
 Add a single group specified by name to an administrative unit specified by name
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitName 'Marketing Division' --groupName 'Marketing Group'
+m365 entra administrativeunit member add --administrativeUnitName 'European Division' --groupName 'Marketing Group'
 ```
 
 Add a single device specified by id to an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7 --deviceId 810c84a8-4a9e-49e6-bf7d-12d183f40d01
+m365 entra administrativeunit member add --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab --deviceId 810c84a8-4a9e-49e6-bf7d-12d183f40d01
 ```
 
 Add a single device specified by name to an administrative unit specified by name
 
 ```sh
-m365 entra administrativeunit member add --administrativeUnitName 'Marketing Division' --deviceName 'JohnDoe-PC'
+m365 entra administrativeunit member add --administrativeUnitName 'European Division' --deviceName 'AdeleVance-PC'
 ```
 
 ## Response 
