--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-get.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-get.mdx
@@ -47,13 +47,13 @@ When the `properties` option includes values with a `/`, for example: `manager/d
 Get information about a member specified by id from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member get --id 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7 
+m365 entra administrativeunit member get --id 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab 
 ```
 
 Get information about a member specified by id from an administrative unit specified by name
 
 ```sh
-m365 entra administrativeunit member get --id 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitName 'Marketing Division' 
+m365 entra administrativeunit member get --id 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitName 'European Division' 
 ```
 
 ## Response
