--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-remove.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-remove.mdx
@@ -59,25 +59,25 @@ To use this command you must be either **Global Administrator** or **Privileged 
 Remove a member specified by id from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member remove --id 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit member remove --id 23b415fb-baea-4995-a26e-c74073beadff --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Remove a user specified by id from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member remove --userId 64131a70-beb9-4ccb-b590-4401e58446ec --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit member remove --userId 23b415fb-baea-4995-a26e-c74073beadff --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Remove a group specified by id from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member remove --groupId b2307a39-e878-458b-bc90-03bc578531d6 --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit member remove --groupId 593af7e2-d27e-42b8-ad17-abe5e57dab61 --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Remove a device specified by id from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member remove --deviceId 810c84a8-4a9e-49e6-bf7d-12d183f40d01 --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit member remove --deviceId 60c99a96-70af-4d68-a8dc-5c51b345c6ce --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Remove a user specified by UPN from an administrative unit specified by name
@@ -89,13 +89,13 @@ m365 entra administrativeunit member remove --userName john.doe@contoso.com --ad
 Remove a group specified by name from an administrative unit specified by id
 
 ```sh
-m365 entra administrativeunit member remove --groupName 'Marketing Group' --administrativeUnitId 03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7
+m365 entra administrativeunit member remove --groupName 'Marketing Group' --administrativeUnitId fc33aa61-cf0e-46b6-9506-f633347202ab
 ```
 
 Remove a device specified by name from an administrative unit specified by name
 
 ```sh
-m365 entra administrativeunit member remove --deviceName 'JohnDoe-PC' --administrativeUnitName 'Marketing Division'
+m365 entra administrativeunit member remove --deviceName 'AdeleVance-PC' --administrativeUnitName 'Marketing Division'
 ```
 
 ## Response
