--- a/docs/docs/cmd/spfx/package/package-generate.mdx
+++ b/docs/docs/cmd/spfx/package/package-generate.mdx
@@ -7,7 +7,7 @@ Generates SharePoint Framework solution package with a no-framework web part ren
 ## Usage
 
 ```sh
-m365 spfx package generate
+m365 spfx package generate [options]
 ```
 
 ## Options
