--- a/docs/docs/cmd/teams/team/team-get.mdx
+++ b/docs/docs/cmd/teams/team/team-get.mdx
@@ -9,7 +9,7 @@ Gets information about the specified Microsoft Teams team
 ## Usage
 
 ```sh
-m365 teams team get
+m365 teams team get [options]
 ```
 
 ## Options
