Added upgrade guidance

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -12,6 +12,16 @@ We updated the [app permission add](./cmd/app/permission/permission-add.mdx) com
 
 Please, check the documentation of the [app permission add](./cmd/app/permission/permission-add.mdx) command to see the updated options and adjust your scripts accordingly.
 
+## CLI configuration
+
+### Removed setting `showSpinner`
+
+We've removed the `showSpinner` setting to be configurable as the spinner functionality has been removed from the project.
+
+#### What action do I need to take?
+
+No changes are required from your side.
+
 ## CLI environment variables
 
 ### Removed deprecated CLI environment variables
