--- a/docs/docs/cmd/spo/contenttype/contenttype-field-set.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-field-set.mdx
@@ -16,10 +16,10 @@ m365 spo contenttype field set [options]
 `-u, --webUrl <webUrl>`
 : Absolute URL of the site where the content type is located.
 
-`-c, --contentTypeId <contentTypeId>`
+`--contentTypeId <contentTypeId>`
 : ID of the content type on which the field reference should be set.
 
-`--id <id>`
+`-i, --id <id>`
 : ID of the field to which the reference should be set.
 
 `-r, --required [required]`
