Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,16 @@ sidebar_position: 3
 
 # Release notes
 
+## v9.1.0 (beta)
+
+### Changes
+
+- enhanced 'flow export' endpoints. [#6297](https://github.com/pnp/cli-microsoft365/issues/6297)
+- enhanced 'spo file' to use utils. [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
+- enhanced [spo page section add](../cmd/spo/page/page-section-add.mdx) with extended zoneEmphasis options. [#5268](https://github.com/pnp/cli-microsoft365/issues/5268)
+- fixed 'VersionPolicies' on generic list. [#6264](https://github.com/pnp/cli-microsoft365/issues/6264)
+- fixed user retrieval using the correct property. [#6308](https://github.com/pnp/cli-microsoft365/issues/6308)
+
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
 ### New commands 
