Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -23,6 +23,8 @@ sidebar_position: 3
 - removed [spo folder rename](../cmd/spo/folder/folder-set.mdx) alias [#5911](https://github.com/pnp/cli-microsoft365/issues/5911)
 - removed stringified property from [spo applicationcustomizer get](../cmd/spo/applicationcustomizer/applicationcustomizer-get.mdx) command [#6052](https://github.com/pnp/cli-microsoft365/issues/6052)
 - removed all `yammer` command aliases [#5764](https://github.com/pnp/cli-microsoft365/issues/5764)
+- removed `showSpinner` config variable [#6126](https://github.com/pnp/cli-microsoft365/issues/6126)
+- aligned options of `spo contenttype field` commands [#6170](https://github.com/pnp/cli-microsoft365/issues/6170)
 
 ## v9.1.0 (beta)
 
